--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
         </nav>
       </header>
       <main class="container container-fluid mt-5">
-        <!-- Render the sub layout -->
+        <!-- render methhod -->
         {{{body}}}
       </main>
       <footer>
