--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,27 @@
-<!-- Loop over each object in the projects array -->
-{{#each post as |post|}}
-  <div class="row mb-4 project">
-    <div class="col-md-5">
-      <h2>
+<!-- Loop over each object in the post array -->
+<div class="card p-3s">
 
-        <a href="/post/{{post.id}}">{{post.title}}</a>
-      </h2>
-      <p>
+  {{#each post as |post|}}
+    <div class="row mb-4 project">
+      <div class="col-md-5">
+        <h2>
 
-        <!-- Pass needed_funding value to the helper function -->
-        <span class="">{{format_date post.date_created}}</span>
-        needed!
-      </p>
-      <p>Created by {{post.username}} on {{format_time post.date_created}}</p>
+          <a href="/post/{{post.id}}">{{post.title}}</a>
+        </h2>
+        <p>
+
+          <!-- Pass needed_funding value to the helper function -->
+          <span class="">{{format_date post.date_created}}</span>
+          needed!
+        </p>
+        <p>Created by {{post.username}} on {{format_time post.date_created}}</p>
+      </div>
+      <div class="col-md-7">
+        <p>
+          {{post.content}}
+        </p>
+      </div>
     </div>
-    <div class="col-md-7">
-      <p>
-        {{post.content}}
-      </p>
-    </div>
-  </div>
-{{/each}}
+  {{/each}}
+
+</div>
