--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>💻 TECH TALK</title>
 
-    {{! <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css"> }}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/jass.css" />
+    <link rel="stylesheet" href="/css/mainStyles.css" />
   </head>
 
   <body>
     <div class="container wrapper">
-      <header class="row">
-        <h1><a class="title" href="/">💻 TECH TALK 💻</a></h1>
+      <header class="row justify-content-center">
+        <div class="logo text-center">
+          <h1><a class="title" href="/">TECH 💻 TALK </a></h1>
+        </div>
         <nav>
           <ul class="navbar">
             <li><a class="link" href="/">Home</a></li>
@@ -25,10 +33,18 @@
           </ul>
         </nav>
       </header>
+      <hr />
 
-      <main>
-        {{{body}}}
-      </main>
+        {{#if dashboard}}
+      <div class="container">
+        <h1 class="mb-4">Blog Post</h1>
+        <a href="/post/new" class="btn btn-success mb-4">New Post</a>
+        {{/if}}
+        
+        <main>
+          {{{body}}}
+        </main>
+      </div>
 
       {{#if loggedIn}}
         <script
