--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,10 +1,39 @@
-<div class="text-center">
-  <p>Created by {{username}} on {{format_date date_created}}</p>
-  <p>
-    <span class="post">{{post}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+<div class="container">
+  <h1 class="mb-4">New Post</h1>
+
+  <form action="/articles" method="POST" id="new-post">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input
+        required
+        value="{{post.title}}"
+        type="text"
+        name="title"
+        id="title"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea
+        name="description"
+        id="description"
+        class="form-control"
+      ></textarea>
+    </div>
+    <div class="form-group">
+      <label for="markdown">Markdown</label>
+      <textarea
+        required
+        name="markdown"
+        id="markdown"
+        class="form-control"
+      >{{post.content}}</textarea>
+    </div>
+
+    <a href="/" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary">Post</button>
+  </form>
 </div>
+
+<script src="./js/newPost.js"></script>
