--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
 
   </div>
   <div class="form-group">
-    <label for="description">Description</label>
+    <label for="description">User</label>
     {{post.userId}}
   </div>
   <div class="form-group">
