fixed the post req issue now working on populating all post on main page

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="mb-4">New Post</h1>
 
-  <form action="/api/" method="POST" id="new-post">
+  <form id="new-post" onSubmit="newFormHandler">
     <div class="form-group">
       <label for="title">Title</label>
       <input
