--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,27 +1,27 @@
 <!-- Loop over each object in the post array -->
-<div class="card p-3s">
+<div class="p-3s">
   <h2>
     Post
   </h2>
 
-  {{#each post as |post|}}
+  {{#each posts}}
     <div class="row mb-4 project">
       <div class="col-md-5">
         <h3>
 
-          <a href="/post/{{post.id}}">{{post.title}}</a>
+          <a href="/post/{{this.id}}">{{this.title}}</a>
         </h3>
         <p>
 
           <!-- Pass needed_funding value to the helper function -->
-          <span class="">{{format_date post.date_created}}</span>
-          needed!
+          {{!-- <span class="">{{format_date post.date_created}}</span> --}}
+
         </p>
-        <p>Created by {{post.userId}} on {{format_time post.date_created}}</p>
+        <p>Created by {{this.userId}} on {{format_date this.createdAt}}</p>
       </div>
       <div class="col-md-7">
         <p>
-          {{post.content}}
+          {{this.content}}
         </p>
       </div>
     </div>
