seeding now works

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,7 @@
     <h2 class="">Sign up</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <h6 class="text-end" for="name-signup">username:</h6>
+        <h6 class="text-start" for="name-signup">username:</h6>
         <input class="form-input" type="text" id="username-signup" />
       </div>
       {{! <div class="form-group">
@@ -31,7 +31,7 @@
       <input class="form-input" type="text" id="email-signup" />
     </div> }}
       <div class="form-group">
-        <h6 class="text-end" for="password-signup">password:</h6>
+        <h6 class="text-start" for="password-signup">password:</h6>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
