style changes to the dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,7 @@
 <div class="container">
   {{#each posts}}
-  <h1 class="mb-4">{{this.username}} Post</h1>
+  <h2 class="mb-4">  Hello,
+    {{this.User.username}}</h2>
 
   <div class="form-group">
     <label for="title">Title</label>
@@ -10,12 +11,13 @@
   </div>
   <div class="form-group">
     <label for="description">User</label>
-    {{this.userId}}
+    {{this.User.username}}
   </div>
   <div class="form-group">
     <label for="markdown">Markdown</label>
     {{this.content}}</textarea>
   </div>
   {{/each}}
+<hr/>
 </div>
 
