--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
     {{! Login section }}
     <form class="form login-form">
       <div class="form-group">
-        <h6 for="email-login">email:</h6>
+        <h6 for="email-login">username:</h6>
         <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
@@ -26,10 +26,7 @@
         <h6 class="text-start" for="name-signup">username:</h6>
         <input class="form-input" type="text" id="username-signup" />
       </div>
-      {{! <div class="form-group">
-      <h6 class="text-end" for="email-signup">email:</h6>
-      <input class="form-input" type="text" id="email-signup" />
-    </div> }}
+
       <div class="form-group">
         <h6 class="text-start" for="password-signup">password:</h6>
         <input class="form-input" type="password" id="password-signup" />
