--- a/public/css/mainStyles.css
+++ b/public/css/mainStyles.css
@@ -1,14 +1,29 @@
 :root {
-  --pri-color: #e0e0e0;
+  --pri-color: #475251;
   --bkg-color: #717275;
-  --sec-color: #212529;
+  --sec-color: #2a3035;
+
+  --link: #588883;
 }
 body {
   background-image: linear-gradient(
-    to right,
+    45deg,
+    var(--pri-color),
     var(--bkg-color),
     var(--sec-color)
   );
+}
+a {
+  text-decoration: none;
+  color: var(--link);
+}
+a:hover {
+  color: #75c5bd;
+}
+
+ul {
+  text-decoration: none;
+  list-style: none;
 }
 .logo h1 {
   font-size: 3rem;
@@ -18,11 +33,27 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-inline: auto;
 }
+
 .login-card {
   width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 input {
   border-radius: 3rem;
+}
+
+.new-post {
+  background-color: var(--link);
+  height: fit-content;
+  width: fit-content;
+  justify-self: end;
+}
+
+.new-post:hover {
+  background-color: #75c5bd;
 }
